[package]
name = "status"
version = "0.1.0"
authors = ["Kay Lin <i@v2bv.net>"]
description = "CloudFlare Workers as service status page"
repository = "https://github.com/RedL0tus/status-server"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "~0.1"
wasm-bindgen = "~0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "~0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "~0.4", optional = true }

hex = "~0.4"
hmac = "~0.7"
sha2 = "~0.8"


[dev-dependencies]
wasm-bindgen-test = "~0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
